1.2vcli Panellet:

* Modified the ConductorTest to include the Python component.

* Added a Python component to the demo set
	- The component just turns a string to upper case (named To Uppercase)
	
* Modified the conductor to run embedded Python/Jython components
	- Python scripts are embedded contexts
	- Location should point to the component base URI
	- Multiple contexts (scripts can be attached)
	- There is no guarante about the order of scripts execution
	
* Passed the embedding test using the upgraded (see updates ExecutableContext) E2K demo components
	- Test demo and traditional context URIs work (Fixed a typo on the connector URI convention)
	- Test with all the embedded components

* (!!) Updated ExecutableContext. This change will break all components so far
	- initialize() changed to initialize(ComponentContextProperties ccp)
	- dispose() changed to dispose(ComponentContextPropoerties ccp)

* Root the ComponentContext in to the root interface ComponentContextProperties
	- ComponentContext presents the same API as before
	- ComponentContextProperties expose the subset of the original API not related to execution
	
* Created and tested the class JythonExecutableComponentAdapter
	- This class acts as an adapter
	- The adapter translate the ExcecutableComponent interface into it Jython counter part
	- The ComponentContext instance is accessible thanks to the Jython bindings 
	- The Jython bindings turn getters/setters into pythonic assignable instance variables
	
* Created the new package subtree org.meandre.core.environments
	- This package is intended to group all non-java executable components
	- The package org.meandre.core.environments.python contains Python related environments
	- The package org.meandre.core.environments.python.jython contains the adapter to run Jython flavored executable components
	
* Modified the Conductor to allow embedding:
	- When preparing the URL class loader
	- If context is a resource pass the URI to the class loader