@@ -1,5 +1,9 @@
 1.2vcli Panellet:
 
+* Modified the add and add_flow services
+	- Added overwrite flag (if true overwrites the component/flow descriptor)
+	- Added dump flag (if true dumps the repository after the requested modifications using the same format of requested modifications)
+
 * Modified the ConductorTest to include the Python component.
 
 * Added a Python component to the demo set
